--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     },
     "require": {
         "illuminate/database": "^5",
-        "phpunit/phpunit": ">6"
+        "phpunit/phpunit": ">=7"
     },
     "require-dev": {
         "slim/slim": "^3",
